<resources>
    <string name="app_name">BankAccount_Task</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>



    <string name="name">Name :</string>
    <string name="email">Email:</string>
    <string name="balance">Balance :</string>
    <string name="account">Account :</string>
    <string name="confirm">Confirm</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="transfer_money">Transfer Money:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dialogTitle">Transfer Money</string>
    <string name="dialogMessage">Are you sure you want to transfer money to "</string>
    <string name="name_a">Name:</string>
    <string name="id_a">ID:</string>
    <string name="recieveraccount">ReceiverAccount</string>
    <string name="senderaccount">SenderAccount</string>
    <string name="transfermoney">TransferMoney</string>
    <string name="success">Success</string>
    <string name="your_action_preformed_successfully">Your action preformed successfully</string>
    <string name="ok">OK</string>
    <string name="back">Back</string>
    <string name="users">Users</string>
    <string name="tr">Transfer</string>
    <string name="tr_history">Transfer History</string>
    <string name="user_account">User Account</string>
</resources>